--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ювелирные изделия</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        header { background-color: #f8d7da; padding: 20px; text-align: center; }
+        .product { margin: 20px; padding: 10px; border: 1px solid #ccc; }
+    </style>
 </head>
 <body>
-    Ювелирный магазин
-    щпоьишукотпцо
+
+<header>
+    <h1>Добро пожаловать в наш магазин ювелирных изделий</h1>
+</header>
+
+<section>
+    <div class="product">
+        <h2>Ожерелье</h2>
+        <p>Элегантное золотое ожерелье с изумрудом.</p>
+        <p>Цена: 10,000 ₽</p>
+    </div>
+    <div class="product">
+        <h2>Кольцо</h2>
+        <p>Серебряное кольцо с сапфиромp>
+        </p>Цена: 7,500 ₽</p>
+    </div>
+</section>
+
+<footer>
+    <p>Свяжитесь с нами: info@jewelryshop.ru</p>
+</footer>
+
 </body>
 </html>
