--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="product">
         <h2>Кольцо</h2>
-        <p>Серебряное кольцо с сапфиромp>
+        <p>Серебряное кольцо с сапфиром
         </p>Цена: 7,500 ₽</p>
     </div>
 </section>
